# conclave

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  _implementation_plan_template.md  anthropic_auth_proposal.md  elevator_pitch.md  future.md  implementation_plan.md  technical_specifications.md  walkthrough.md
conclave/: CLAUDE.md  conclave.config.yaml  package-lock.json
conclave_cli/: .gitignore  GETTING_STARTED.md  README.md  anthropic_auth_proposal.md  package.json
conclave_ui/: CLAUDE.md  ideation.md
docs/: CHAT_IMPLEMENTATION_PLAN.md  CHAT_TRANSCRIPT_EXAMPLE.md  GETTING_STARTED_MACOS.md  GETTING_STARTED_UBUNTU.md  GETTING_STARTED_WINDOWS.md
janus/: README.md  janus.config.yaml  package.json
python/: CLAUDE.md  README.md  pyproject.toml
python/conclave/: __init__.py
python/conclave/chat/: __init__.py  commands.py
python/conclave/chat/ui/: __init__.py
python/conclave/flows/basic/: __init__.py
python/conclave/flows/leading/: engine.py  round-1.md
python/conclave/providers/: grok.py  openai.py
python/conclave/utils/: banner.py  output.py
python/janus/: __init__.py  cli.py
python/janus/chat/: __init__.py  persistence.py  room.py  session.py
python/janus/chat/ui/: display.py
python/janus/core/: config.py  types.py
python/janus/flows/basic/: engine.py  prompts.py  refinement.md
python/janus/flows/leading/: __init__.py
python/janus/providers/: base.py  claude_cli.py  factory.py  gemini.py
python/janus/utils/: banner.py  output.py  prompts.py
test_debate_results/: anthropic (cli).v1.md  anthropic (cli).v2.md  gemini.v1.md  (+3 more)
(+176 files in other folders)
